[package]
name = "pwless"
version = "0.1.0"
authors = ["llfourn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
curve25519-dalek = { version = "1.2", default-features = false, features = ["nightly", "u64_backend", "serde"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }
blake2 = "0.8"
scrypt = { version = "0.2", default-features = false }
rand = "0.6"
serde = "1"
serde_derive = "1"
hex-serde = "0.1"


[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"


