[package]
name = "pwless_server"
version = "0.1.0"
authors = ["llfourn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1" }
pwless = { path = "../" }
warp = "0.1.20"
tokio = "0.2.0-alpha.6"
serde = "1"
serde_derive = "1"
